--- a/app/index.html
+++ b/app/index.html
@@ -19,11 +19,20 @@
   </head>
   <body ng-app="permitidorayarApp">
     <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">Tu navegador es <strong>demasiado anciano</strong>. Por favor <a href="http://browsehappy.com/">actualizar</a> para mejorar la experiencia.</p>
     <![endif]-->
+    <header id="marquesina">Esta es la marquesina</header>
+
+    <ul class="nav nav-pills pull-right">
+      <li><a ng-href="#">Input</a></li>
+    </ul>
 
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
+
+    <footer>
+      LOGOS
+    </footer>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
