--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
     <header id="marquesina">Esta es la marquesina</header>
 
     <ul class="nav nav-pills pull-right">
-      <li><a ng-href="#">Input</a></li>
+      <li><a ng-href="/#/input">Input</a></li>
     </ul>
 
     <!-- Add your site or application content here -->
