Travis CI setup.

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>permitidorayar</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -21,11 +21,6 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">Tu navegador es <strong>demasiado anciano</strong>. Por favor <a href="http://browsehappy.com/">actualizar</a> para mejorar la experiencia.</p>
     <![endif]-->
-    <header id="marquesina">Esta es la marquesina</header>
-
-    <ul class="nav nav-pills pull-right">
-      <li><a ng-href="/#/input">Input</a></li>
-    </ul>
 
     <!-- Add your site or application content here -->
     <div class="container" ng-view=""></div>
