--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,11 @@
 
     <footer>
       LOGOS
+      <p>
+        <small>
+          Un proyecto de <a href="http://montenegrojaramillo.com" target="_blank">Ana Maria Montenegro</a>. 2014
+        </small>
+      </p>
     </footer>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
