--- a/app/index.html
+++ b/app/index.html
@@ -26,12 +26,11 @@
     <div class="container" ng-view=""></div>
 
     <footer>
-      LOGOS
-      <p>
-        <small>
-          Un proyecto de <a href="http://montenegrojaramillo.com" target="_blank">Ana Maria Montenegro</a>. 2014
-        </small>
-      </p>
+      <div class="logos">
+        <a href="http://www.bogotahumana.gov.co/" target="_blank"><img src="images/bogotaHumana.jpg" /></a>
+        <a href="http://www.idartes.gov.co/" target="_blank"><img src="images/idartes.jpg" /></a>
+        <a href="http://www.bogotahumana.gov.co/" target="_blank"><img src="images/logogaleriap.jpg" /></a>
+      </div>
     </footer>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -59,6 +58,8 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/CornerCouch/angular-cornercouch.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
